k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: notes-service
  namespace: notes
  labels:
    app: notes-app

spec:
  type: NodePort
  selector:
      app: notes-app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      nodePort: 30007
