k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resources
  namespace: notes
spec:
  rules:
  - host: "notesapp.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: notes-service
            port:
              number: 8000
